Финальное задание 12 спринта Исправление замечаний по результатам ревью. Попытка 2