@@ -4,6 +4,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.dao.film.FilmDbStorage;
 import ru.yandex.practicum.filmorate.dao.film.LikesDbStorage;
+import ru.yandex.practicum.filmorate.dao.mapper.filmmappers.FilmRowMapper;
 import ru.yandex.practicum.filmorate.dao.user.UserDbStorage;
 import ru.yandex.practicum.filmorate.dto.filmdto.FilmDto;
 import ru.yandex.practicum.filmorate.exceptions.ConditionsNotMetException;
@@ -13,7 +14,9 @@ import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genres;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
@@ -36,19 +39,19 @@ public class FilmService {
     }
 
     public List<FilmDto> getFilms() {
-        return filmDbStorage.getAllFilms()
-                .stream()
-                .peek(film -> {
-                    filmGenreService.getFilmGenre(film.getId());
-                })
+        List<Film> films = filmDbStorage.getAllFilms();
+
+        List<Film> filmsWithGenre = addGenreInFilm(films);
+
+        return filmsWithGenre.stream()
                 .map(FilmMapper::mapToFilmDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Film getFilmById(Long id) {
         Film film = filmDbStorage.getFilmById(id).orElseThrow(()
                 -> new NotFoundException("Фильм с id = " + id + " не найден"));
-        List<Genres> genre = filmGenreService.getFilmGenre(film.getId());
+        List<Genres> genre = filmGenreService.getFilmGenreById(film.getId());
         film.setGenres(genre);
         return film;
     }
@@ -56,8 +59,6 @@ public class FilmService {
     public void addLike(Long userId, Long filmId) {
         validateIdsNotNull(userId, filmId);
 
-        //Уже есть в сервисе метод? который возвращает фильм по id
-        // Выбрасывает исключение если фильм не найден
         getFilmById(filmId);
         checkUserExists(userId);
         log.info("Попытка лайкнуть фильм");
@@ -75,19 +76,17 @@ public class FilmService {
         log.info("Лайк успешно удален");
     }
 
-    public List<Film> getTopFilm(int count) {
+    public List<FilmDto> getTopFilm(int count) {
         if (count <= 0) {
             throw new ConditionsNotMetException("Значение count должно быть положительным числом");
         }
         List<Film> topFilms = filmDbStorage.getTopFilms(count);
-        topFilms.stream()
-                .peek(film -> {
-                    filmGenreService.getFilmGenre(film.getId());
-                })
+
+        List<Film> topFilmsWithGenre = addGenreInFilm(topFilms);
+
+        return topFilmsWithGenre.stream()
                 .map(FilmMapper::mapToFilmDto)
                 .toList();
-
-        return filmDbStorage.getTopFilms(count);
     }
 
     public Film createFilm(Film film) {
@@ -123,6 +122,20 @@ public class FilmService {
             validateFilmDuration(newFilm);
         }
         return filmDbStorage.updateFilm(newFilm);
+    }
+
+    private List<Film> addGenreInFilm(List<Film> films) {
+
+        List<Long> filmIds = films.stream().
+                map(Film::getId).toList();
+
+        Map<Long, List<Genres>> filmGenresMap = filmGenreService.getFilmGenresByIds(filmIds);
+
+        films.forEach(film -> {
+            List<Genres> genres = filmGenresMap.get(film.getId());
+            film.setGenres(genres != null ? genres : Collections.emptyList());
+        });
+        return films;
     }
 
     private void checkUserExists(Long userId) {
